# TrivialOpenGL

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  MinGW_Make.bat  MinGW_Test.bat  Pack.bat  README.md  Test.bat  TrivialOpenGL.props  TrivialOpenGL.sln  TrivialOpenGL.vcxproj  TrivialOpenGL.vcxproj.filters
.github/workflows/: build_and_test.yml  build_and_test_mingw.yml
TrivialOpenGL_Example/: CMakeLists.txt  MinGW_Make.bat  TrivialOpenGL_Example.vcxproj  TrivialOpenGL_Example.vcxproj.filters
TrivialOpenGL_Example/resources/: Resource.rc
TrivialOpenGL_Example/src/: AnimatedTriangle.cpp  AnimatedTriangle.h  BorderlessWindow.cpp  BorderlessWindow.h  ColoredText.cpp  ColoredText.h  ExampleSupport.cpp  ExampleSupport.h  FormatedText.cpp  FormatedText.h  IconFromFile.cpp  IconFromFile.h  IconFromResource.cpp  IconFromResource.h  Resource.h  SimpleText.cpp  SimpleText.h  SimpleTriangle.cpp  SimpleTriangle.h  TextBox.cpp  TextBox.h  TopToBottomText.cpp  TopToBottomText.h  UnicodeText.cpp  UnicodeText.h  main.cpp
TrivialOpenGL_Test/: CMakeLists.txt  MinGW_Make.bat  TrivialOpenGL_Test.vcxproj  TrivialOpenGL_Test.vcxproj.filters
TrivialOpenGL_Test/src/: main.cpp
docs/: dev_notes.txt
include/: TrivialOpenGL.h  TrivialOpenGL_Debug.h  TrivialOpenGL_FineText.h  TrivialOpenGL_Font.h  TrivialOpenGL_Headers.h  TrivialOpenGL_Key.h  TrivialOpenGL_Text.h  TrivialOpenGL_TextDrawer.h  TrivialOpenGL_Utility.h  TrivialOpenGL_Window.h
src/: TrivialOpenGL_Window.cpp
